--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
             "email": "ahaduzzamanaapon@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": "^8.1",
         "illuminate/support": "^10.0 || ^11.0 || ^12.0",
