--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
             "email": "ahaduzzamanaapon@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
         "php": "^8.1",
